--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h2>Test</h2>
-   <!-- 1. 로그인하기 -->
-    <form id="frmLogin" class="hidden">
+  <!-- 1. 로그인하기 -->
+  <form id="frmLogin" class="hidden">
     <input required maxlength="19" type="text" placeholder="당신의 이름을 적어 주세요."/>
     <input type="submit" value="Log In" />
     </form>
@@ -20,12 +20,33 @@
     <!-- 2. 시계 만들기 -->
     <h2 id="clock">00:00:00</h2>
 
+    <!-- 4. todo 리스트 만들기 -->
+    <!--todo 리스트 입력-->
+    <form id="frmTodo">
+        <input type="text" placeholder="할 일을 적고 엔터키를 누르세요." required />
+    </form>
+    <!--todo 리스트 출력-->
+    <ul id="lstTodo"></ul>
+    <!--
+    <li>
+        <span>hello</span>
+        <button>X</button>
+    </li>
+        자바스크립트로 추가
+    -->
+
+    <!-- 5. 날씨 넣기 -->
+    <div id="weather">
+        <span>날씨</span>
+        <span>지역</span>
+    </div>
+
     <!-- 3. 명언 넣기-->
     <div id="quote">
         <span></span>
         <span></span>
     </div>
-        
+
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
